<resources>
    <string name="app_name">AIUINEW</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wakeup_tip">快说\"小飞小飞\"唤醒我吧</string>

    <string name="touch_speak">按住说话</string>
    <string name="up_cancel">松开结束</string>
    <!--侧边栏导航-->
    <string name="nav_feedback">反馈</string>
    <string name="nav_settings">设置</string>
    <string name="nav_net_test">HTTP测试</string>
    <string name="nav_send_log">分享日志</string>
    <string name="nav_about">关于</string>
    <!--设置页面-->
    <string name="aiui_mode">模式</string>
    <string name="translation_mode">翻译模式</string>
    <string name="translation_tip_summary">将语音或文本翻译成设定的语言</string>
    <string name="interact">交互</string>
    <string name="accent">方言</string>
    <string name="wakeup">唤醒</string>
    <string name="wakeup_tip_summary">通过唤醒+命令进行交互</string>
    <string name="cloud_tts">合成播报</string>
    <string name="tts_tip_summary">对语义结果进行播报</string>
    <string name="bos">前端点</string>
    <string name="eos">语音后端点时间</string>
    <string name="eos_invalid_tip">后端点有效值应为数字</string>

    <string name="log">日志</string>
    <string name="debug_log">输出调试日志</string>
    <string name="debug_log_summary">在Logcat中打印运行日志</string>
    <string name="aiui_log">输出AIUI日志</string>
    <string name="aiui_log_summary">保存交互日志至SD卡中</string>
    <string name="clear_aiui_log">清除AIUI日志</string>
    <string name="clear_aiui_log_summary">清除SD卡中的AIUI日志</string>

    <string name="debug">调试</string>

    <string name="save_datalog">保存交互音频</string>
    <string name="save_datalog_summary">在SD卡中保存交互的音频与结果日志</string>
    <string name="prime">高级</string>
    <string name="appid_set">AppID设置</string>
    <string name="appid_set_summary">使用新的AppID和Key</string>
    <string name="appid_input">AppID</string>
    <string name="key_input">Key</string>
    <string name="appid_restore_tip">清空AppID及Key可恢复默认</string>
    <string name="scene_input">Scene</string>

    <!--语言种类-->
    <string name="lang_cn_near">中文近场</string>
    <string name="lang_cn_far">中文远场</string>
    <string name="lang_en_near">英文近场</string>
    <string name="lang_en">英文</string>
    <string name="lang_cn">中文</string>
    <string name="lang_ja">日语</string>
    <string name="lang_ko">韩语</string>
    <string name="lang_fr">法语</string>
    <string name="lang_es">西班牙语</string>
    <string name="lang_ru">俄语</string>
    <string name="not_support_lang">暂不支持翻译至该语种</string>

    <string name="test_url">请输入待测试的Url</string>
    <string name="start_test">测试</string>
    <string name="stop_test">停止</string>

    <string name="trans_scene">请输入翻译场景</string>
    <string name="trans_scene_tip">设置翻译场景</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="trans_invalid_tip">翻译场景不能为空</string>

    <string name="http_test_error_tip">HTTP访问错误，无法继续</string>
    <string name="http_test_stop_tip">已停止</string>
    <string name="invalid_request">为不合法的请求</string>
    <string name="http_test_request_exception">请求异常：</string>
    <string name="invalid_url">url不合法</string>
    <string name="empty_url">第一个url不能为空</string>

    <string name="send_aiui_log">发送AIUI日志</string>
    <string name="aiui_log_not_exist">AIUI日志不存在</string>
    <string name="clear_aiui_log_title">是否清除日志</string>
    <string name="already_clear_aiui_log">AIUI日志已清除</string>
    <string name="clear_aiui_log_fail">文件删除失败</string>
    <string name="cannot_clear_aiui_log">缺少权限，无法清除日志</string>
    <string name="clear_aiui_log_yes">是</string>
    <string name="clear_aiui_log_no">否</string>


</resources>
